fix submit button

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -42,6 +42,11 @@ input[class^="btn-"]:hover {
   color: #333;
 }
 
+button[class^="btn-"]:hover {
+  color: #333;
+  background-color: $main-color;
+}
+
 // Backgrounds
 .bg {
   &-main {
