--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -271,7 +271,8 @@ img {
       padding-bottom: 56.25%; /* 16:9 */
       height: 0;
     }
-    .videoWrapper iframe {
+
+    .videoWrapper .react-player {
       position: absolute;
       top: 0;
       left: 0;
