fix style input form

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -348,6 +348,7 @@ img {
 #contact {
   &-a {
     .text-fields {
+      font-family: "Dosis", sans-serif;
       display: grid;
       grid-template-areas:
         "name email"
@@ -375,6 +376,10 @@ img {
 
       .text-input {
         padding: 0.5rem 1rem;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 4px;
+        border: 1px solid hsl(0, 0%, 80%);
+        font-family: "Dosis", sans-serif;
       }
     }
 
