--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -375,10 +375,11 @@ img {
 
       .text-input {
         font-family: "Dosis", sans-serif;
-        padding: 0.5rem 1rem;
+        font-size: 16px;
         background-color: hsl(0, 0%, 100%);
-        border-radius: 4px;
         border: 1px solid hsl(0, 0%, 80%);
+        border-radius: 4px;
+        padding: 8px 10px;
       }
     }
 
